--- a/.github/workflows/action-test-ubuntu.yml
+++ b/.github/workflows/action-test-ubuntu.yml
@@ -3,7 +3,7 @@ name: Action Test Ubuntu
 on:
   push:
     paths:
-      - '.github/workflows/action-test-linux.yaml'
+      - '.github/workflows/action-test-ubuntu.yaml'
       - 'action.yaml'
       - 'runtime.py'
   workflow_dispatch:
@@ -21,3 +21,11 @@ jobs:
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
           CLIENT_KEY: ${{ secrets.CLIENT_KEY }}
           CLIENT_REALM: ${{ secrets.CLIENT_REALM }}
+          WORKSPACE:
+          ENVIRONMENT:
+          VERSION_TAG: ${{ github.sha }}
+          TF_STATE_BUCKET_NAME: test
+          TF_STATE_REGION: test
+          IAC_BUCKET_NAME: test
+          IAC_REGION: test
+          CHECKOUT_BRANCH: main
