--- a/.github/workflows/action-test-ubuntu.yml
+++ b/.github/workflows/action-test-ubuntu.yml
@@ -21,8 +21,8 @@ jobs:
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
           CLIENT_KEY: ${{ secrets.CLIENT_KEY }}
           CLIENT_REALM: ${{ secrets.CLIENT_REALM }}
-          WORKSPACE:
-          ENVIRONMENT:
+          WORKSPACE: Runtimes
+          ENVIRONMENT: production
           VERSION_TAG: ${{ github.sha }}
           TF_STATE_BUCKET_NAME: test
           TF_STATE_REGION: test
