--- a/action.yaml
+++ b/action.yaml
@@ -62,7 +62,7 @@ runs:
         python-version: '3.10' 
         cache: 'pip' # caching pip dependencies
     
-    - run: pip install -r ${{ github.action_path }}/requirements.txt
+    - run: pip install pyyaml requests
     
     - name: Setup STK CLI
       uses: stack-spot/stk-cli-action@v1.1
@@ -74,7 +74,7 @@ runs:
     - name: Generate manifesto
       run: |
         stk use workspace ${{ inputs.WORKSPACE }}
-        stk deploy plan --env ${{ inputs.ENVIRONMENT }} --output ${{ github.action_path }}
+        # stk deploy plan --env ${{ inputs.ENVIRONMENT }} --output ${{ github.action_path }}
       shell: bash
 
     - name: Start Self Hosted DEPLOY run with Runtime
