update action.yaml shell
Signed-off-by: Guillaume Falourd <guillaume.falourd@zup.com.br>

--- a/action.yaml
+++ b/action.yaml
@@ -63,6 +63,7 @@ runs:
         cache: 'pip' # caching pip dependencies
     
     - run: pip install pyyaml requests
+      shell: bash
     
     - name: Setup STK CLI
       uses: stack-spot/stk-cli-action@v1.1
