--- a/action.yaml
+++ b/action.yaml
@@ -55,14 +55,17 @@ runs:
       run: echo 🤖 OS runner is $(uname)
       shell: bash
 
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
     
-    - uses: actions/setup-python@v4.7.0
+    - name: Setup Python
+      uses: actions/setup-python@v4.7.0
       with:
         python-version: '3.10' 
         cache: 'pip' # caching pip dependencies
     
-    - run: pip install pyyaml requests
+    - name: Install python libraries
+      run: pip install -r ${{ github.action_path }}/requirements.txt
       shell: bash
     
     - name: Setup STK CLI
