--- a/.github/workflows/action-test-macos.yaml
+++ b/.github/workflows/action-test-macos.yaml
@@ -35,6 +35,12 @@ jobs:
           IAC_REGION: test
           CHECKOUT_BRANCH: main
 
+      - name: Check Run Data
+        run: |
+          echo "RunId: ${{ steps.tasks.outputs.runId }}"
+          echo "RunType: ${{ steps.tasks.outputs.runType }}"
+          echo "Tasks: ${{ steps.tasks.outputs.tasks }}"
+
   provision:
     runs-on: macos-latest
     needs: [orchestration]
