--- a/manifest-infra.yaml
+++ b/manifest-infra.yaml
@@ -3,29 +3,29 @@ kind: shared_infrastructure
 metadata:
   name: my-application
 spec:
-  infraId: ULID
-  repository: STRING
+  infraId: 01HB5PX0JTMRZ4GCRJCPFEJ76V
+  repository: https://github.com/owner/repo
   appliedPlugins:
-    - name: STRING
-      alias: STRING
-      type: STRING
-      pluginVersionId: ULID
-      stackVersionId: ULID
+    - name: runtime-demo-dbp/deploy-by-plugin/s3-bucket
+      alias: my-s3-bucket
+      type: infra
+      pluginVersionId: 01HB5PX0JTMRZ4GCRJCPFEJ76V
+      stackVersionId: 01HB5PX0JTMRZ4GCRJCPFEJ76V
       inputs:
-        key1: STRING
-        key2: NUMBER
-        keyN: BOOLEAN
-        producer: OBJECT
-        stk_wks_id: ULID
-        workspace: STRING
-        stk_env_id: ULID
-        environment: STRING
+        key1: value1
+        key2: 123
+        keyN: true
+        producer: {}
+        stk_wks_id: 01HB5PX0JTMRZ4GCRJCPFEJ76V
+        workspace: my-workspace
+        stk_env_id: 01HB5PX0JTMRZ4GCRJCPFEJ76V
+        environment: production
       connections:
         requires:
-          - selected: STRING
-            name: STRING
-            type: STRING
+          - selected: my-iam
+            name: my-iam
+            type: aws-iam-conn
         generates:
-          - selected: STRING
-            name: STRING
-            type: STRING
+          - selected: my-aws-s3-conn
+            name: my-aws-s3-conn
+            type: aws-s3-conn
