--- a/.github/workflows/action-test-macos.yaml
+++ b/.github/workflows/action-test-macos.yaml
@@ -42,7 +42,7 @@ jobs:
     needs: [orchestration]
     strategy:
        matrix:
-         task: ${{ fromJSON(needs.orchestration.outputs.runTasks) }}
+         task: ${{ fromJSON(needs.orchestration.outputs.tasks) }}
        fail-fast: true
        max-parallel: 1
     steps:
