--- a/.github/workflows/action-test-windows.yaml
+++ b/.github/workflows/action-test-windows.yaml
@@ -43,7 +43,7 @@ jobs:
     needs: [orchestration]
     strategy:
        matrix:
-         task: ${{ fromJSON(needs.orchestration.outputs.runTasks) }}
+         task: ${{ fromJSON(needs.orchestration.outputs.tasks) }}
        fail-fast: true
        max-parallel: 1
     steps:
