update action.yaml file
Signed-off-by: Guillaume Falourd <guillaume.falourd@zup.com.br>

--- a/action.yaml
+++ b/action.yaml
@@ -58,8 +58,16 @@ runs:
         python-version: '3.10' 
         cache: 'pip' # caching pip dependencies
     
-    - name: Install python libraries
-      run: pip install -r ${{ github.action_path }}/requirements.txt
+    - name: Install python libraries 
+      run: 
+        run:   |
+         if [ "$RUNNER_OS" != "Windows" ]; then
+            pip install -r ${{ github.action_path }}/requirements.txt
+         elif [ "$RUNNER_OS" == "Windows" ]; then
+            pip install -r ${{ github.action_path }}\requirements.txt
+         else
+            echo "$RUNNER_OS not supported"
+            exit
       shell: bash
     
     - name: Setup STK CLI
