--- a/action.yaml
+++ b/action.yaml
@@ -66,7 +66,7 @@ runs:
         elif [ ${{runner.os}} == 'Windows' ]; then
           pip install -r ${{ github.action_path }}\requirements.txt
         else
-          echo "$RUNNER_OS not supported"
+          echo "${{runner.os}} not supported"
           exit
       shell: bash
     
