update action.yaml stk-cli action
Signed-off-by: Guillaume Falourd <guillaume.falourd@zup.com.br>

--- a/action.yaml
+++ b/action.yaml
@@ -77,7 +77,7 @@ runs:
       shell: bash
     
     - name: Setup STK CLI
-      uses: stack-spot/stk-cli-action@v1.1
+      uses: stack-spot/stk-cli-action@qa
       with:
         client_id: ${{ inputs.CLIENT_ID }}
         client_key: ${{ inputs.CLIENT_KEY }}
