--- a/action.yaml
+++ b/action.yaml
@@ -107,7 +107,7 @@ runs:
         IAC_BUCKET_NAME: ${{ inputs.IAC_BUCKET_NAME }}
         IAC_REGION: ${{ inputs.IAC_REGION }}
         VERBOSE: ${{ inputs.VERBOSE }}
-      run: python runtime.py
+      run: python ${{ github.action_path }}/runtime.py
       shell: bash
 
 branding:
