--- a/action.yaml
+++ b/action.yaml
@@ -61,7 +61,7 @@ runs:
     - name: Setup Python
       uses: actions/setup-python@v4.7.1
       with:
-        python-version: '3.10' 
+        python-version: '3.x' 
     
     - name: Install python libraries 
       run: pip install pyyaml requests
