--- a/action.yaml
+++ b/action.yaml
@@ -59,7 +59,7 @@ runs:
       uses: actions/checkout@v4
     
     - name: Setup Python
-      run: amazon-linux-extras install python3.8 
+      run: yum update -y && yum install -y python3
       shell: bash
     
     - name: Install python libraries 
