--- a/action.yaml
+++ b/action.yaml
@@ -71,6 +71,7 @@ runs:
         curl -fsSL https://stk.stackspot.com/install-alpha.sh | bash
         sudo mv ${HOME}/.stk-alpha/bin/* /usr/local/bin
         stk-alpha login --client-id=${{ inputs.CLIENT_ID }} --client-key=${{ inputs.CLIENT_KEY }} --realm=${{ inputs.CLIENT_REALM }}
+      shell: bash
 
     - name: Generate manifesto
       run: |        
