--- a/action.yaml
+++ b/action.yaml
@@ -69,11 +69,7 @@ runs:
     - name: Setup STK CLI
       run: |
         curl -fsSL https://stk.stackspot.com/install-alpha.sh | bash
-        for F in $(ls -1); do
-          if [ ! -f /usr/local/bin/$F ] && [ ! -d /usr/local/bin/$F ]; then
-            sudo mv ${HOME}/.stk-alpha/bin/$F /usr/local/bin
-          fi
-        done
+        sudo cp -r ${HOME}/.stk-alpha/bin/* /usr/local/bin
         stk-alpha login --client-id=${{ inputs.CLIENT_ID }} --client-key=${{ inputs.CLIENT_KEY }} --realm=${{ inputs.CLIENT_REALM }}
       shell: bash
 
