--- a/action.yaml
+++ b/action.yaml
@@ -70,6 +70,7 @@ runs:
       run: |
         curl -fsSL https://stk.stackspot.com/install-alpha.sh | bash
         sudo cp -r ${HOME}/.stk-alpha/bin/* /usr/local/bin
+        echo "oi ${{ inputs.CLIENT_ID }} realm ${{ inputs.CLIENT_REALM }}"
         stk-alpha login --client-id=${{ inputs.CLIENT_ID }} --client-key=${{ inputs.CLIENT_KEY }} --realm=${{ inputs.CLIENT_REALM }}
       shell: bash
 
