--- a/action.yaml
+++ b/action.yaml
@@ -72,6 +72,7 @@ runs:
         sudo cp -r ${HOME}/.stk-alpha/bin/* /usr/local/bin
         rm -f ${HOME}/.stk-alpha/bin/wrapper-last-update.json
         stk-alpha login --client-id=${{ inputs.CLIENT_ID }} --client-key=${{ inputs.CLIENT_KEY }} --realm=${{ inputs.CLIENT_REALM }}
+        stk-alpha upgrade
       shell: bash
 
     - name: Generate manifesto
