--- a/action.yaml
+++ b/action.yaml
@@ -69,7 +69,9 @@ runs:
     - name: Setup STK CLI
       run: |
         curl -fsSL https://stk.stackspot.com/install-alpha.sh | bash
-        sudo ln -s ${HOME}/.stk-alpha/bin/stk-alpha /usr/local/bin
+        if [ ! -f /usr/local/bin/stk-alpha ]; then
+          sudo ln -s ${HOME}/.stk-alpha/bin/stk-alpha /usr/local/bin
+        fi
         stk-alpha login --client-id=${{ inputs.CLIENT_ID }} --client-key=${{ inputs.CLIENT_KEY }} --realm=${{ inputs.CLIENT_REALM }}
         stk-alpha upgrade
       shell: bash
