--- a/action.yaml
+++ b/action.yaml
@@ -59,7 +59,7 @@ runs:
       uses: actions/checkout@v3
     
     - name: Setup Python
-      run: sudo yum update -y && sudo yum install -y python3
+      run: sudo yum update -y && sudo yum install -y python3 libxcrypt-compat
       shell: bash
     
     - name: Install python libraries 
