--- a/action.yaml
+++ b/action.yaml
@@ -72,6 +72,7 @@ runs:
         if [ ! -f /usr/local/bin/stk-alpha ]; then
           sudo ln -s ${HOME}/.stk-alpha/bin/stk-alpha /usr/local/bin
         fi
+        which stk-alpha
         stk-alpha login --client-id=${{ inputs.CLIENT_ID }} --client-key=${{ inputs.CLIENT_KEY }} --realm=${{ inputs.CLIENT_REALM }}
         stk-alpha upgrade
       shell: bash
