--- a/action.yaml
+++ b/action.yaml
@@ -88,6 +88,11 @@ runs:
       run: |
         $HOME/.stk/bin/stk use workspace ${{ inputs.WORKSPACE }}
         
+    - name: Show Error Log
+        if: failure()
+        run: |
+          cat $HOME/.stk/logs/*
+          
         FLAGS=$(echo "--env ${{ inputs.ENVIRONMENT }} --target ${{ github.action_path }} --version ${{ inputs.VERSION_TAG }}")
         
         if [ ! -z "${{ inputs.BRANCH }}" ]; then
