--- a/action.yaml
+++ b/action.yaml
@@ -101,7 +101,7 @@ runs:
         if [ ! -z "${{ inputs.VERBOSE }}" ]; then
           echo "STK DEPLOY PLAN FLAGS = $FLAGS"
         fi
-        $HOME/.stk/bin/stk deploy plan $FLAGS
+        $HOME/.stk/bin/stk register infra && $HOME/.stk/bin/stk deploy plan $FLAGS
       shell: bash
 
     - name: Start Self Hosted DEPLOY run with Runtime
