--- a/action.yaml
+++ b/action.yaml
@@ -101,6 +101,10 @@ runs:
         if [ ! -z "${{ inputs.VERBOSE }}" ]; then
           echo "STK DEPLOY PLAN FLAGS = $FLAGS"
         fi
+        $HOME/.stk/bin/stk list stack > /tmp/debug.txt
+        $HOME/.stk/bin/stk list stack >> /tmp/debug.txt
+        echo "SHOW DEBUGS"
+        cat /tmp/debug.txt
         $HOME/.stk/bin/stk register infra
         $HOME/.stk/bin/stk deploy plan $FLAGS
       shell: bash
