--- a/action.yaml
+++ b/action.yaml
@@ -101,8 +101,8 @@ runs:
         if [ ! -z "${{ inputs.VERBOSE }}" ]; then
           echo "STK DEPLOY PLAN FLAGS = $FLAGS"
         fi
-        $HOME/.stk/bin/stk list stack > /tmp/debug.txt
-        $HOME/.stk/bin/stk list stack >> /tmp/debug.txt
+        $HOME/.stk/bin/stk list stack > /tmp/debug.txt 2>&1
+        $HOME/.stk/bin/stk list workspace >> /tmp/debug.txt 2>&1
         echo "SHOW DEBUGS"
         cat /tmp/debug.txt
         $HOME/.stk/bin/stk register infra
