--- a/action.yaml
+++ b/action.yaml
@@ -102,10 +102,10 @@ runs:
           echo "STK DEPLOY PLAN FLAGS = $FLAGS"
         fi
         set -x
-        $HOME/.stk/bin/stk list stack > /tmp/debug.txt 2>&1
-        $HOME/.stk/bin/stk list workspace >> /tmp/debug.txt 2>&1
+        $HOME/.stk/bin/stk list stack > $HOME/debug.txt 2>&1
+        $HOME/.stk/bin/stk list workspace >> $HOME/debug.txt 2>&1
         echo "SHOW DEBUGS"
-        cat /tmp/debug.txt
+        cat $HOME/debug.txt
         $HOME/.stk/bin/stk register infra
         $HOME/.stk/bin/stk deploy plan $FLAGS
       shell: bash
