--- a/action.yaml
+++ b/action.yaml
@@ -103,7 +103,8 @@ runs:
         if [ ! -z "${{ inputs.VERBOSE }}" ]; then
           echo "STK DEPLOY PLAN FLAGS = $FLAGS"
         fi
-        $HOME/.stk/bin/stk deploy plan $FLAGS
+        export HTTP_ENABLE_DEBUG=true
+        $HOME/.stk/bin/stk deploy plan $FLAGS || cat ~/.stk/logs/logs.log
       shell: bash
 
     - name: Start Self Hosted DEPLOY run with Runtime
