--- a/action.yaml
+++ b/action.yaml
@@ -106,9 +106,7 @@ runs:
         if [ ! -z "${{ inputs.VERBOSE }}" ]; then
           echo "STK DEPLOY PLAN FLAGS = $FLAGS"
         fi
-        export HTTP_ENABLE_DEBUG=true
-        cat ~/.stk/.cached
-        $HOME/.stk/bin/stk deploy plan $FLAGS || cat ~/.stk/logs/logs.log
+        $HOME/.stk/bin/stk deploy plan $FLAGS
       shell: bash
 
     - name: Start Self Hosted DEPLOY run with Runtime
